--- a/TransporteApp/src/app/pages/inicioconductor/inicioconductor.page.html
+++ b/TransporteApp/src/app/pages/inicioconductor/inicioconductor.page.html
@@ -1,13 +1,29 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>inicioconductor</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Inicio Conductor</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">inicioconductor</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Viajes Disponibles</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <ion-list>
+        <ion-item *ngFor="let viaje of viajesDisponibles">
+          <ion-label>
+            <h2>{{ viaje.destino }}</h2>
+            <p>Cliente: {{ viaje.cliente }}</p>
+            <p>Hora: {{ viaje.hora }}</p>
+          </ion-label>
+          <ion-button slot="end" (click)="seleccionarViaje(viaje)">Seleccionar viaje</ion-button>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
