detalles de login
a

--- a/TransporteApp/src/app/pages/login/login.page.html
+++ b/TransporteApp/src/app/pages/login/login.page.html
@@ -22,7 +22,9 @@
     Iniciar Sesión
   </ion-button>
 
-  <ion-button fill="clear" color="tertiary" routerLink="/recuperarcontrasnia">
+  <ion-button fill="clear" color="tertiary" routerLink="/recuperarcontrasnia" class="ion-text-center" style="width: 100%">
     ¿No recuerdas tu contraseña?
   </ion-button>
+  
 </ion-content>
+
