--- a/TransporteApp/src/app/pages/registroconductor/registroconductor.page.html
+++ b/TransporteApp/src/app/pages/registroconductor/registroconductor.page.html
@@ -1,13 +1,44 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>registroconductor</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Registro de Conductor</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">registroconductor</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-item>
+    <ion-label position="floating">Nombre</ion-label>
+    <ion-input type="text" required [(ngModel)]="nombre"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">RUT</ion-label>
+    <ion-input type="text" required [(ngModel)]="rut"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Matrícula de Vehículo</ion-label>
+    <ion-input type="text" required [(ngModel)]="matricula"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Tipo de Vehículo</ion-label>
+    <ion-input type="text" required [(ngModel)]="tipoVehiculo"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Modelo de Vehículo</ion-label>
+    <ion-input type="text" required [(ngModel)]="modeloVehiculo"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Color del Vehículo</ion-label>
+    <ion-input type="text" required [(ngModel)]="colorVehiculo"></ion-input>
+  </ion-item>
+
+  <ion-button expand="block" color="primary" (click)="registrarConductor()">
+    Registrarse
+  </ion-button>
 </ion-content>
