--- a/TransporteApp/src/app/pages/login/login.page.html
+++ b/TransporteApp/src/app/pages/login/login.page.html
@@ -1,13 +1,28 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title >Inicio de Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <ion-item>
+    <ion-label position="floating">Usuario:</ion-label>
+    <ion-input type="text" required [(ngModel)]="usuario"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">Contraseña:</ion-label>
+    <ion-input type="password" required [(ngModel)]="contrasenia"></ion-input>
+  </ion-item>
+
+  <ion-button expand="block" color="primary" (click)="iniciarSesion()">
+    Iniciar Sesión
+  </ion-button>
+
+  <ion-button fill="clear" color="tertiary" routerLink="/recuperarcontrasnia">
+    ¿No recuerdas tu contraseña?
+  </ion-button>
 </ion-content>
