--- a/TransporteApp/src/app/pages/inicio/inicio.page.html
+++ b/TransporteApp/src/app/pages/inicio/inicio.page.html
@@ -10,7 +10,7 @@
       ¿Ya tienes una cuenta?
     </ion-button>
 
-    <ion-button expand="full" color="secondary" routerLink="/registro">
+    <ion-button expand="full" color="primary" routerLink="/registro">
       ¡Regístrate si no!
     </ion-button>
   </div>
