--- a/TransporteApp/src/app/pages/inicio/inicio.page.scss
+++ b/TransporteApp/src/app/pages/inicio/inicio.page.scss
@@ -1,13 +1,12 @@
- ion-button {
-    margin: 10px 0;
-  }
-  .contenedor-imagen {
-    justify-content: center; 
-    align-items: center;   
+.container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
   
-  img {
-    max-width: 75%;   
-    height: auto;      
+  ion-button {
+    margin: 10px 0;
   }
+  
