--- a/TransporteApp/src/app/pages/inicio/inicio.page.html
+++ b/TransporteApp/src/app/pages/inicio/inicio.page.html
@@ -5,7 +5,9 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <div class="container">
+  <div class="contenedor-imagen">
+    <img src="https://www.learnchile.cl/wp-content/uploads/2019/05/Logo-duoc.jpg" >
+  </div>
     <ion-button expand="full" color="primary" routerLink="/login">
       ¿Ya tienes una cuenta?
     </ion-button>
@@ -13,5 +15,4 @@
     <ion-button expand="full" color="primary" routerLink="/registro">
       ¡Regístrate si no!
     </ion-button>
-  </div>
 </ion-content>
