--- a/TransporteApp/src/app/pages/iniciousuario/iniciousuario.page.html
+++ b/TransporteApp/src/app/pages/iniciousuario/iniciousuario.page.html
@@ -3,12 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-buttons slot="end">
-      <ion-button fill="clear" (click)="registrarConductor()">
-        Registro Conductor
-      </ion-button>
-    </ion-buttons>
-    <ion-title class="ion-text-center">Inicio Usuarios</ion-title>
+    <ion-title>Inicio Usuarios</ion-title>
   </ion-toolbar>
 </ion-header>
 
