--- a/TransporteApp/src/app/pages/menu/menu.page.html
+++ b/TransporteApp/src/app/pages/menu/menu.page.html
@@ -11,11 +11,11 @@
   <div class="contenedor-imagen">
     <img src="https://www.learnchile.cl/wp-content/uploads/2019/05/Logo-duoc.jpg" >
   </div>
-    <ion-button expand="full" color="primary" routerLink="/iniciousuario">
+    <ion-button expand="full" color="primary" routerLink="/inicioconductor">
       ¿No tienes auto? busca a un conductor que te lleve
     </ion-button>
 
-    <ion-button expand="full" color="primary" routerLink="/registroconductor">
+    <ion-button expand="full" color="primary" routerLink="/iniciousuario">
       ¿Deseas ser parte de nuestro equipo?
     </ion-button>
 </ion-content>
