Producto final, casi terminado.
Correciones finales

--- a/TransporteApp/src/app/pages/inicio/inicio.page.html
+++ b/TransporteApp/src/app/pages/inicio/inicio.page.html
@@ -15,4 +15,7 @@
     <ion-button expand="full" color="primary" routerLink="/registro" >
       ¡Regístrate si no!
     </ion-button>
+    <ion-button expand="full" color="primary" routerLink="/registroconductor">
+      ¿Deseas ser parte de nuestro equipo?
+    </ion-button>
 </ion-content>
