--- a/TransporteApp/src/app/pages/menu/menu.page.html
+++ b/TransporteApp/src/app/pages/menu/menu.page.html
@@ -14,4 +14,11 @@
     <ion-button expand="full" color="primary" routerLink="/inicioconductor">
       ¿No tienes auto? busca a un conductor que te lleve
     </ion-button>
+
+    <ion-button expand="full" color="primary" routerLink="/iniciousuario">
+      ¿Deseas ser parte de nuestro equipo?
+    </ion-button>
+    <ion-button expand="full" color="primary" routerLink="/servicio">
+      Gestiona tus viajes
+    </ion-button>
 </ion-content>
