--- a/TransporteApp/src/app/pages/inicio/inicio.page.html
+++ b/TransporteApp/src/app/pages/inicio/inicio.page.html
@@ -11,8 +11,13 @@
     <ion-button expand="full" color="primary" routerLink="/login">
       ¿Ya tienes una cuenta?
     </ion-button>
-
     <ion-button expand="full" color="primary" routerLink="/registro" >
       ¡Regístrate si no!
+    </ion-button>
+    <ion-button expand="full" color="primary" routerLink="/registroconductor" >
+      ¡Regístrate si no!
+    </ion-button>
+    <ion-button expand="full" color="primary" routerLink="/loginconductor">
+      ¿Ya tienes una cuenta?
     </ion-button>
 </ion-content>
