Validaciones, restricción en el mapa
a

--- a/TransporteApp/src/app/pages/inicio/inicio.page.html
+++ b/TransporteApp/src/app/pages/inicio/inicio.page.html
@@ -15,9 +15,9 @@
       ¡Regístrate si no!
     </ion-button>
     <ion-button expand="full" color="primary" routerLink="/registroconductor" >
-      ¡Regístrate si no!
+      ¡¿Deseas trabajar con nosotros?! ¡Registrate!
     </ion-button>
     <ion-button expand="full" color="primary" routerLink="/loginconductor">
-      ¿Ya tienes una cuenta?
+      ¿Ya eres conductor? ¡Inicia sección!
     </ion-button>
 </ion-content>
