--- a/TransporteApp/src/app/pages/menuconductor/menuconductor.page.html
+++ b/TransporteApp/src/app/pages/menuconductor/menuconductor.page.html
@@ -4,6 +4,9 @@
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-title>Menú Conductor</ion-title>
+    <ion-button routerLink="/inicio" style="position: fixed; bottom: 5px; left: 75%; ">
+      Inicio
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
